--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
         </div>
     </div>
 
+    <!-- Welcome Popup -->
+    <div id="welcome-popup" class="welcome-popup hidden">
+        <div class="welcome-popup-content">
+            <div class="welcome-icon">👋</div>
+            <h2 id="welcome-title">Chào mừng!</h2>
+            <p id="welcome-message">Chúc bạn một ngày làm việc vui vẻ và hiệu quả!</p>
+            <div class="welcome-buttons">
+                <button id="welcome-yes" class="btn-welcome btn-yes" data-i18n="welcome-yes">Có, cảm ơn!</button>
+                <button id="welcome-no" class="btn-welcome btn-no" data-i18n="welcome-no">Không, cảm ơn</button>
+            </div>
+        </div>
+    </div>
+
     <script src="language.js"></script>
     <script src="script.js"></script>
 </body>
